cube/base/chris-store-ui-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"route.openshift.io/v1","kind":"Route","metadata":{"annotations":{"openshift.io/host.generated":"true"},"labels":{"app.kubernetes.io/instance":"chris-smaug","io.kompose.service":"chris-store-ui"},"managedFields":[{"apiVersion":"route.openshift.io/v1","fieldsType":"FieldsV1","fieldsV1":{"f:metadata":{"f:labels":{".":{},"f:app.kubernetes.io/instance":{},"f:io.kompose.service":{}}},"f:spec":{"f:port":{".":{},"f:targetPort":{}},"f:to":{"f:kind":{},"f:name":{},"f:weight":{}},"f:wi [...]
    openshift.io/host.generated: 'true'
  creationTimestamp: '2022-06-28T20:30:56Z'
  labels:
    app.kubernetes.io/instance: chris-smaug
    io.kompose.service: chris-store-ui
  managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            .: {}
            'f:app.kubernetes.io/instance': {}
            'f:io.kompose.service': {}
        'f:spec':
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
      manager: Mozilla
      operation: Update
      time: '2022-06-28T20:30:56Z'
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:ingress': {}
      manager: openshift-router
      operation: Update
      subresource: status
      time: '2022-06-28T20:30:56Z'
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            'f:kubectl.kubernetes.io/last-applied-configuration': {}
      manager: argocd-application-controller
      operation: Update
      time: '2022-06-28T21:05:30Z'
  name: chris-store-ui
  namespace: chrisproject-dev
  resourceVersion: '1192056361'
  uid: 7f7db04c-0a3a-43b7-8860-ce52f01a1716
spec:
  host: chris-store-ui-chrisproject-dev.apps.smaug.na.operate-first.cloud
  port:
    targetPort: '8021'
  to:
    kind: Service
    name: chris-store-ui
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - lastTransitionTime: '2022-06-28T20:30:56Z'
          status: 'True'
          type: Admitted
      host: chris-store-ui-chrisproject-dev.apps.smaug.na.operate-first.cloud
      routerCanonicalHostname: router-default.apps.smaug.na.operate-first.cloud
      routerName: default
      wildcardPolicy: None
